JS just needs to allow for images to be added to appropriate person

--- a/aboutUs/index.html
+++ b/aboutUs/index.html
@@ -18,7 +18,7 @@
   <h1 class="title">Clergy and Staff</h1>
 
   <div id="cardWrap">
-    <div class="card" style="width: 18rem;">
+    <!-- <div class="card">
       <img src="./Images/shana-rosenblatt.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Shana Rosenblatt</h5>
@@ -26,33 +26,7 @@
           301-593-3410 x101<br>
           <a href="mailto:srosenblatt@shaaretefila.org">srosenblatt@shaaretefila.org</a></p>
       </div>
-    </div>
-    <div class="card" style="width: 18rem;">
-      <img src="./images/hazzan-ackerman.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Hazzan Adina Klein Ackerman</h5>
-        <p class="card-text"><b>Cantor</b>
-          <a href="mailto:caackerman@shaaretefila.org">caackerman@shaaretefila.org</a></p>
-      </div>
-    </div>
-    <div class="card" style="width: 18rem;">
-      <img src="./images/babette-cohn.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Babette Cohn</h5>
-        <p class="card-text"><b>Director of Education & Programming</b><br>
-          301-593-3410 x106<br>
-          <a href="mailto:bcohn@shaaretefila.org">bcohn@shaaretefila.org</a></p>
-      </div>
-    </div>
-    <div class="card" style="width: 18rem;">
-      <img src="./Images/beth-adler.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Beth Adler</h5>
-        <p class="card-text"><b>Early Childhood Center Director</b><br>
-          301-593-3410 x105<br>
-          <a href="mailto:badler@shaaretefila.org">badler@shaaretefila.org</a></p>
-      </div>
-    </div>
+    </div>     -->
   </div>
 
   <h3>Board of Directors</h3>
