--- a/aboutUs/index.html
+++ b/aboutUs/index.html
@@ -15,30 +15,14 @@
 </head>
 
 <body>
-  <h1 class="title">Clergy and Staff</h1>
+  <h1 class="title">Board of Directors</h1>
 
   <div id="cardWrap">
-    <!-- <div class="card">
-      <img src="./Images/shana-rosenblatt.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Shana Rosenblatt</h5>
-        <p class="card-text"><b>Executive Director</b><br>
-          301-593-3410 x101<br>
-          <a href="mailto:srosenblatt@shaaretefila.org">srosenblatt@shaaretefila.org</a></p>
-      </div>
-    </div>     -->
+    <!--Holds Board of Directors Cards-->
   </div>
 
-  <h3>Board of Directors</h3>
-  <div id="directors">
-    <p>Name: Title</p>
-    <p>Name: Title</p>
-    <p>Name: Title</p>
-    <p>Name: Title</p>
-    <p>Name: Title</p>
-    <p>Name: Title</p>
-    <p>Name: Title</p>
-    <p>Name: Title</p>
+  <h3>Clergy and Staff</h3>
+  <div id="clergy">
     <p>Name: Title</p>
     <p>Name: Title</p>
   </div>
@@ -46,7 +30,7 @@
 
 
   <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <!-- jQuery first, then Popper.js, Bootstrap JS, then app.js -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
