education page - some color

--- a/Education-One_Page/startbootstrap-one-page-wonder-gh-pages/index.html
+++ b/Education-One_Page/startbootstrap-one-page-wonder-gh-pages/index.html
@@ -5,20 +5,21 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="Education - Shaare Tefila" content="Education and Learning Page">
+  <meta name="Shaare Tefila" content="Shaare Tefila">
 
-  <title>One Page Wonder - Shaare Tefila</title>
+  <title>Shaare Tefila - Education</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="Bootstrap Stylesheet">
 
   <!-- Custom fonts for this template -->
-  <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="Google Fonts Stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="Google Fonts Stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/one-page-wonder.min.css" rel="stylesheet">
+  <link href="./css/one-page-wonder.css" rel="One Page Wonder Stylesheet">
+  <!-- <link rel="stylesheet" href="./css/one-page-wonder.min.css"> -->
 
 </head>
 
@@ -51,14 +52,13 @@
     <div class="masthead-content">
       <div class="container">
         <h1 class="masthead-heading mb-0">Education</h1>
-        <!-- <h2 class="masthead">Education</h2> -->
         <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">Registration Open</a>
       </div>
     </div>
-    <!-- <div class="bg-circle-1 bg-circle"></div>
+    <div class="bg-circle-1 bg-circle"></div>
     <div class="bg-circle-2 bg-circle"></div>
     <div class="bg-circle-3 bg-circle"></div>
-    <div class="bg-circle-4 bg-circle"></div> -->
+    <div class="bg-circle-4 bg-circle"></div>
   </header>
 
   <section>
@@ -66,14 +66,14 @@
       <div class="row align-items-center">
         <div class="col-lg-6 order-lg-2">
           <div class="p-5">
-            <img class="img-fluid rounded-circle" src="./img/littleExplorers.jpg" alt="">
+            <img class="img-fluid rounded-circle" src="./img/littleExplorers.jpg" alt="Our Little Explorers">
           </div>
         </div>
         <div class="col-lg-6 order-lg-1">
           <div class="p-5">
             <h2 class="display-4">Gates of Discovery Preschool</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
-            <a href="http://www.gatesofdiscovery.org" class="btn btn-primary btn-xl rounded-pill mt-5">Go To Website</a>
+            <p>The Rose and George Teller Jewish synagogue preschool of Shaare Tefila strives to provide each child with a secure, caring and stimulating experience. It is our desire to help preschool students use their innate abilities to create, imagine, explore and learn. Our powerful belief in the competence of all children nourishes the practice of maximizing every child’s capabilities.</p>
+            <a href="http://www.gatesofdiscovery.org" rel="Gates Of Discovery Website Link" class="btn btn-primary btn-xl rounded-pill mt-5">Go To Website</a>
           </div>
         </div>
       </div>
@@ -91,7 +91,7 @@
         <div class="col-lg-6">
           <div class="p-5">
             <h2 class="display-4">Chavaya Religious School</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+            <p>Looking for an engaging, liberal Jewish education program for your child? We offer free tuition for grades K-2 and have a unique two-day-a-week program for grades 3-7 which combines in person and online learning, plus teen education on Sunday mornings.</p>
             <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">Learn More</a>
           </div>
         </div>
@@ -104,14 +104,17 @@
       <div class="row align-items-center">
         <div class="col-lg-6 order-lg-2">
           <div class="p-5">
-            <img class="img-fluid rounded-circle" src="img/03.jpg" alt="">
+            <img class="img-fluid rounded-circle" src="./img/sisterhood.jpg" alt="Join Our Sisterhood, Adult Learning">
           </div>
         </div>
         <div class="col-lg-6 order-lg-1">
           <div class="p-5">
             <h2 class="display-4">Adult Learning</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
-            <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">Join Us!</a>
+            <p>Join Rabbi Layman for a New Year of Adult Education!<br>
+              <br>
+              Ongoing classes: New participants always welcome!
+            </p>
+            <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">Click For Times and Dates</a>
           </div>
         </div>
       </div>
