--- a/Education-One_Page/startbootstrap-one-page-wonder-gh-pages/index.html
+++ b/Education-One_Page/startbootstrap-one-page-wonder-gh-pages/index.html
@@ -92,7 +92,7 @@
           <div class="p-5">
             <h2 class="display-4">Chavaya Religious School</h2>
             <p>Looking for an engaging, liberal Jewish education program for your child? We offer free tuition for grades K-2 and have a unique two-day-a-week program for grades 3-7 which combines in person and online learning, plus teen education on Sunday mornings.</p>
-            <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">Learn More</a>
+            <a href="http://127.0.0.1:5500/Chavaya/index.html" class="btn btn-primary btn-xl rounded-pill mt-5">Learn More</a>
           </div>
         </div>
       </div>
