--- a/Education-One_Page/Chavaya/index.html
+++ b/Education-One_Page/Chavaya/index.html
@@ -4,14 +4,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="./styles.css" rel="Chavaya Stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+  
   <title>Chavaya Religious School</title>
 </head>
 <body>
   <nav class="navbar">
     <div class="Take-Me-Back">
-    <a class="Home" href="#">Shaare Tefila - Where You Will Always Belong</a><br>
-    <a class="Education" href="http://127.0.0.1:5500/startbootstrap-one-page-wonder-gh-pages/index.html">Shaare Tefila - Education Page</a>
+    <a class="HomePage" href="#">Shaare Tefila - Where You Will Always Belong</a><br>
+    <!-- <a class="Education" href="http://127.0.0.1:5500/startbootstrap-one-page-wonder-gh-pages/index.html">Shaare Tefila - Education Page</a> -->
           <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button> -->
@@ -34,26 +34,27 @@
   </nav>
 
 <div class="head">
+    <img class="ChavayaImg" src="./img/chavaya-color_200px.jpg" alt="Chavaya Learning Logo">
+
   <h1 class="heading">Chavaya – Religious School</h1>
   <h2>REGISTRATION IS STILL OPEN FOR THE 2019-20 SCHOOL YEAR </h2>
-    <form action="#">
-    <input type="submit" value="Register Now" />
-    </form>
+  <button onclick="window.location.href = 'https://w3docs.com';">Register Now!</button>
 </div>
 
+<div class="background-color">
 <div class="Mission">
   <h1 class="Our-Mission">Our Mission</h1>
-  <p>To provide the children of Shaare Tefila with:
+  <p>To provide the children of Shaare Tefila with:<br>
 
     A familiarity and knowledge of Jewish traditions,
-    Love and respect for Torah,
-    Connection to the people of and the land of Israel,
-    An understanding of Jewish history, and
+    Love and respect for Torah,<br>
+    Connection to the people of and the land of Israel, <br>
+    An understanding of Jewish history, and<br>
     Fostering a sense of responsibility to our world through Derech Eretz (ethical decency) and Tikkun Olam.</p>
 </div>
 
 <div class="Core">
-    <h1 class="Core-Values">Core Values</h1>
+    <h1 class="Core-Values">Core<br>Values</h1>
 
     <li>
       <ul class="core_list">KEHILAH KEDOSHAH – We are a “holy community”</ul>
@@ -63,8 +64,11 @@
     </li>
 </div>
 
+<img class="ShaareLogo" src="./img/logo.png" alt="Shaare Tefila Logo">
+
+
 <div class="Schedule">
-    <h1 class="Class-Schedule">Class Schedule</h1>
+    <h1 class="Class-Schedule">Class<br>Schedule</h1>
     <p>Grades K-2: Sundays 9:30-12:00<br>
     Grades 3-7: Sundays 9:30-12:00, plus 30 minutes of Hebrew tutoring online each week.<br>
     Teens: Sundays, 9:30-12:00, twice a month for classroom topics and field trips.
@@ -73,9 +77,9 @@
 
 <div class="Cal">
     <h1 class="Calendar">Calendar</h1>
-    <form action="#">
-        <input type="submit" value="Go To The Calendar" />
-    </form>
+    <button onclick="window.location.href = 'https://w3docs.com';">Click Here!</button>
+  </div>
+</div>
 </div>
 
 <footer class="Contact_Links">
