--- a/Education-One_Page/Chavaya/index.html
+++ b/Education-One_Page/Chavaya/index.html
@@ -64,9 +64,6 @@
     </li>
 </div>
 
-<img class="ShaareLogo" src="./img/logo.png" alt="Shaare Tefila Logo">
-
-
 <div class="Schedule">
     <h1 class="Class-Schedule">Class<br>Schedule</h1>
     <p>Grades K-2: Sundays 9:30-12:00<br>
@@ -83,7 +80,14 @@
 </div>
 
 <footer class="Contact_Links">
-  <p class="m-0 text-center text-white small">Copyright &copy; Your Website 2019</p>
+    
+  <div class="logo">
+    <img class="ShaareLogo" src="./img/logo2.png" alt="Shaare Tefila Logo">
+  </div>
+
+  <div class="info">
+    <p class="m-0 text-center text-white small">Copyright &copy; Your Website 2019</p>
+  </div>
 </footer>
 </body>
 </html>
